@@ -1,3 +1,8 @@
+2012-01-12  Pedro Alves  <palves@redhat.com>
+
+	* i386-tdep.c (i386_frame_cache_1): Also mark the frame base as
+	available when %ebp is found to be zero (outermost).
+
 2012-01-10  Doug Evans  <dje@google.com>
 
 	* dwarf2read.c (dwarf_decode_lines): Remove arg "abfd".  New arg
